<resources>
    <string name="app_name">ToDoList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_found_tasks">Not found tasks</string>
    <string name="anything_to_add">Anything to add?</string>
    <string name="new_task">New Task</string>
    <string name="save">Save</string>
    <string name="add_details">Add Details</string>
    <string name="set_start_time">Set start time</string>
    <string name="name_task">Task name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="initial">Initial</string>
    <string name="finished">Finished</string>
    <string name="edit_task">Edit Task</string>
</resources>
