<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.AddTaskFragment"
    android:padding="16dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/new_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:hintEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/add_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imgContent"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_content"
        app:layout_constraintStart_toStartOf="@+id/tlName"
        app:layout_constraintTop_toBottomOf="@+id/tlContent" />

    <ImageView
        android:id="@+id/imgDate"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_date"
        app:layout_constraintStart_toEndOf="@+id/imgContent"
        app:layout_constraintTop_toTopOf="@+id/imgContent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/save"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        app:layout_constraintTop_toTopOf="@+id/imgDate" />
</androidx.constraintlayout.widget.ConstraintLayout>